[package]
name = "mod-manager-db"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
rusqlite = { version = "0.32.0", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytes = "1.0"
base64 = "0.21.7"